--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "bumpBuild": "./dist/bin/bumpBuild.js"
+    "bumpBuild": "./dist/bin/bumpBuild.js",
+    "syncCordovaConfig": "./dist/bin/syncCordovaConfig.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,14 +22,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^10.1.3",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "xmlpoke": "^0.1.16"
   },
   "dependencies": {
     "@types/jsonfile": "^4.0.1",
+    "@types/xmlpoke": "^0.1.4",
+    "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "jsonfile": "^4.0.0",
-    "simple-git": "^1.95.0",
-    "xmlpoke": "^0.1.16",
-    "chalk": "^2.4.1"
+    "simple-git": "^1.95.0"
   }
 }
