--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "author": "@RhinoLance",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.1.3",
+    "@types/node": "^10.17.5",
     "typescript": "^2.8.3"
   },
   "dependencies": {
     "@types/jsonfile": "^4.0.1",
     "@types/xmlpoke": "^0.1.4",
-    "xmlpoke": "^0.1.16",
     "chalk": "^2.4.1",
-    "commander": "^2.15.1",
+    "commander": "^2.20.3",
     "jsonfile": "^4.0.0",
-    "simple-git": "^1.95.0"
+    "simple-git": "^1.126.0",
+    "xmlpoke": "^0.1.16"
   }
 }
